Fix: Config folder not being available inside container

--- a/docker-compose-for-local.yaml
+++ b/docker-compose-for-local.yaml
@@ -106,6 +106,8 @@ services:
       - 3000
     depends_on:
       - mongo
+    volumes:
+      - "./config:/build/config"
 
   biap-igm-node-js:
     build:
@@ -132,6 +134,7 @@ services:
       - mongo
     volumes:
       - "./images:/app/images"
+      - "./config:/app/config"
     restart: always
 
   py-ondc-protocol:
