--- a/docker-compose-for-local.yaml
+++ b/docker-compose-for-local.yaml
@@ -3,6 +3,8 @@ version: "2"
 services:
   mongo:
     image: mongo
+    # TODO : Fix this beofre you deploy it
+    user: "501"
     restart: always
     ports:
       - 27017:27017
@@ -29,7 +31,7 @@ services:
   nginx:
     build:
       context: biap-app-ui-front
-      dockerfile: Dockerfile
+      dockerfile: DockerfileWithoutSSL
       args:
         REACT_APP_BASE_URL: ${REACT_APP_BASE_URL}
         REACT_APP_MMI_BASE_URL: ${REACT_APP_MMI_BASE_URL}
@@ -124,6 +126,7 @@ services:
       BUGZILLA_API_KEY: ${BUGZILLA_API_KEY}
       BUGZILLA_SERVICE_URI: ${BUGZILLA_SERVICE_URI}
       BAP_URL: ${BAP_URL}
+      LOG_LEVEL: ${LOG_LEVEL}
       VOLUME_IMAGES_BASE_URL: ${VOLUME_IMAGES_BASE_URL}
     container_name: biap-igm-node-js
     ports:
@@ -168,6 +171,7 @@ services:
       BUGZILLA_API_KEY: ${BUGZILLA_API_KEY}
       BUGZILLA_BASE_URI: ${BUGZILLA_BASE_URI}
       BUGZILLA_ADMIN_EMAIL: ${BUGZILLA_ADMIN_EMAIL}
+      LOG_LEVEL: ${LOG_LEVEL}
     ports:
       - "8001:8001"
     expose:
@@ -181,6 +185,7 @@ services:
     environment:
       BUGZILLA_WWW: /var/www/html/bugzilla/
       BUGZILLA_ADMIN_EMAIL: ${BUGZILLA_ADMIN_EMAIL}
+      LOG_LEVEL: ${LOG_LEVEL}
     container_name: bugzilla-dev-service
     image: shameerkc/bugzilla-dev-sqlite
     ports:
