--- a/deploying_ansible/buyer-app-run.yaml
+++ b/deploying_ansible/buyer-app-run.yaml
@@ -19,7 +19,7 @@
   tasks:
     - name: Clone biap-client-node-js
       git:
-        repo: "https://github.com/ONDC-Official/biap-client-node-js.git"
+        repo: "https://github.com/omni-srejitk/biap-client-node-js.git"
         dest: "/home/ubuntu/biap-client-node-js"
         version: "master"
 
@@ -31,27 +31,27 @@
         group: "ubuntu"
         mode: "0755"
 
-#    - name: Clone biap ui
-#      git:
-#        repo: "https://github.com/ONDC-Official/biap-app-ui-front.git"
-#        dest: "/home/ubuntu/biap-app-ui-front"
-#        version: "master"
+    #    - name: Clone biap ui
+    #      git:
+    #        repo: "https://github.com/omni-srejitk/biap-app-ui-front.git"
+    #        dest: "/home/ubuntu/biap-app-ui-front"
+    #        version: "master"
 
     - name: Clone biap-igm-node-js
       git:
-        repo: "https://github.com/ONDC-Official/biap-igm-node-js.git"
+        repo: "https://github.com/omni-srejitk/biap-igm-node-js.git"
         dest: "/home/ubuntu/biap-igm-node-js"
         version: "main"
 
     - name: Clone py ondc protocol
       git:
-        repo: "https://github.com/ONDC-Official/py-protocol-layer.git"
+        repo: "https://github.com/omni-srejitk/py-protocol-layer.git"
         dest: "/home/ubuntu/py-ondc-protocol"
         version: "master"
 
     - name: Clone biap-bugzilla-service
       git:
-        repo: "https://github.com/ONDC-Official/biap-bugzilla-service"
+        repo: "https://github.com/omni-srejitk/biap-bugzilla-service"
         dest: "/home/ubuntu/biap-bugzilla-service"
         version: "main"
 
@@ -94,4 +94,4 @@
         replace: "{{ domain }}"
 
     - name: Run docker compose up
-      shell: "cd /home/ubuntu/ && sudo docker-compose build && sudo docker-compose up -d"
+      shell: "cd /home/ubuntu/ && sudo docker-compose build && sudo docker-compose up"
